--- a/style.css
+++ b/style.css
@@ -38,8 +38,23 @@
 .conteudo-senha{
     margin-top: 80px;
     background-color: var(--fundo-senha);
+    padding: 24px;
+    border-bottom: 6px solid var(--borda);
+}
+
+#campo-senha{
+    background-color: var(--fundo-senha);
     border: none;
     color: var(--branco);
     font-family: var(--reboto-mono);
     font-size: 40px;
+}
+
+#campo-senha:focus{
+    outline: none;
+}
+
+.conteudo{
+    max-width: 1200px;
+    margin: 0 auto;
 }
